# MahjongOrganizer

./: .gitignore  CMakeLists.txt  Player.cpp  Player.hpp  PlayerParser.cpp  PlayerParser.hpp  Room.cpp  Room.hpp  Table.cpp  Table.hpp  contactDelegate.qml  main.cpp  main.qml  qml.qrc
cmake/: MahjongHelper.cmake
doc/: majhong.txt  struct.drawio
res/: mahjong.json  mahjong_example.json
src/: CMakeLists.txt  main.cpp  main_old.cpp  qml.qrc
src/components/: ContactModel.qml  DialogItems.qml  LoadFilePage.qml  MahjongApp.qml  NewPlayerForm.qml  PlayersDelegate.qml  PlayersView.qml  TablesDelegate.qml  TablesPage.qml  TablesView.qml  main.qml
src/mahjong/: Game.cpp  Game.hpp  MahjongApp.cpp  MahjongApp.hpp  Player.cpp  Player.hpp  PlayerModel.cpp  PlayerModel.hpp  PlayerParser.cpp  PlayerParser.hpp  Room.cpp  Room.hpp  Table.cpp  Table.hpp
